Initial refactoring for CF features (#40)
* Initial refactoring for CF features
* Improving tests
* Improved examples about Lambdas